--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Intrist</title>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 
-test
+<div class="main">
+	<div class="large-font">Intrist</div>
+	<div class="sub-font">[ coming soon ]</div>
+</div>
 
 </body>
 </html>
