--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="main">
 	<div class="large-font">Intrist</div>
-	<div class="med-font">Making dating intere$ting again.</div>
+	<div class="med-font">Making dating <span style="color: #3A6D3A">interesting</span> again.</div>
 	<div class="sub-font">[ coming soon ]</div>
 </div>
 
