--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="main">
-	<div class="large-font">Intrist</div>
+	<div class="large-font">Intryst</div>
 	<div class="med-font">Making dating <span style="color: #3A6D3A">interesting</span> again.</div>
 	<div class="sub-font">[ coming soon ]</div>
 </div>
